# design-to-unity

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PSD到Unity预制体扩展方案.md  README.md  README.zh-CN.md  Unity导出规范.md  llms.txt  pyproject.toml  run-stdio.sh  server.json  下一步计划.md  设计方案.md
docs/: launch-kit.md  publishing.md
src/design_handoff_mcp/: asset_store.py  config.py  figma_adapter.py  figma_client.py  lanhu_client.py  normalizer.py  packet_store.py  photoshop_export_adapter.py  profiles.py  psd_adapter.py  server.py  unity_editor_importer.py  unity_editor_validator.py  unity_prefab_verifier.py  unity_yaml_writer.py  visual_diff.py
src/design_handoff_mcp/templates/unity_editor/: DesignToUnityPrefabImporter.cs  DesignToUnityPrefabValidator.cs
templates/figma-plugin-exporter/: README.md  code.js  manifest.json  ui.html
templates/photoshop-uxp-exporter/: README.md  index.html  index.js  manifest.json  sample-design.json
tests/: test_psd_pipeline.py
